update new api inforbip